--- a/src/Css/servicios.css
+++ b/src/Css/servicios.css
@@ -1,19 +1,16 @@
 
 .container{
     text-align:center;
-    
-       
 }
 
 .card-img{
     margin-top:10px;
-    width: 10rem;
+    width: 8rem;
     height: 8rem;
 }
 
 .visualizar{
     width:30%;
-    padding-top: 2px;
 }
 
 .row{
@@ -33,15 +30,7 @@
 }
 
 .colum:hover{
+    background:rgb(192, 214, 214);
     border: 1px solid rgb(15, 15, 15);
     transition: all 0.2s ease-out;
-}
-
-.pdf{
-    text-align: center;
-}
-
-.archivo{
-    width:100%;
-    height: 20rem;
 }
